--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "^14.0.3",
     "axios": "^1.6.2",
+    "fastapi": "^0.0.8",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
